--- a/languages/nodejs/18/Containerfile
+++ b/languages/nodejs/18/Containerfile
@@ -1,6 +1,6 @@
 # Image for NodeJS development
 # Based on the official image available at https://hub.docker.com/_/node
 
-FROM docker.io/library/node:latest
+FROM docker.io/library/node:18
 
 RUN npm install -g typescript-language-server
