--- a/languages/rust/latest/Containerfile
+++ b/languages/rust/latest/Containerfile
@@ -3,5 +3,8 @@
 
 FROM docker.io/library/rust:latest
 
-RUN curl --silent --location --remote-name \
-  https://github.com/rust-analyzer/rust-analyzer/releases/download/2021-11-29/rust-analyzer-x86_64-unknown-linux-gnu.gz
+RUN rustup component add rust-src && \
+    mkdir -p ~/.local/bin && \
+    curl --silent --location https://github.com/rust-lang/rust-analyzer/releases/latest/download/rust-analyzer-x86_64-unknown-linux-gnu.gz | \
+      gunzip -c - > ~/.local/bin/rust-analyzer && \
+    chmod +x ~/.local/bin/rust-analyzer
