--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -13,7 +13,7 @@ jobs:
   version:
     strategy:
       matrix:
-        version: ["latest", "26", "25", "24", "23", "22"]
+        version: ["latest", "26", "25", "24", "23"]
     name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
