--- a/languages/python/latest/Containerfile
+++ b/languages/python/latest/Containerfile
@@ -1,6 +1,7 @@
 # Image for Python development
 # Based on the official image available at https://hub.docker.com/_/python
 
+# hadolint ignore=DL3007
 FROM docker.io/library/python:latest
 
 RUN pip install python-lsp-server
