--- a/languages/julia/latest/Containerfile
+++ b/languages/julia/latest/Containerfile
@@ -1,6 +1,7 @@
 # Image for Julia development
 # Based on the official image available at https://hub.docker.com/_/julia
 
+# hadolint ignore=DL3007
 FROM docker.io/library/julia:latest
 
 RUN julia --eval 'using Pkg; Pkg.add("LanguageServer")'
