--- a/languages/nim/latest/Containerfile
+++ b/languages/nim/latest/Containerfile
@@ -1,6 +1,7 @@
 # Image for Nim development
 # Based on the official image available at https://hub.docker.com/r/nimlang/nim
 
+# hadolint ignore=DL3007
 FROM docker.io/nimlang/nim:latest
 
 RUN nimble refresh
