--- a/languages/nodejs/latest/Containerfile
+++ b/languages/nodejs/latest/Containerfile
@@ -1,6 +1,7 @@
 # Image for NodeJS development
 # Based on the official image available at https://hub.docker.com/_/node
 
+# hadolint ignore=DL3007
 FROM docker.io/library/node:latest
 
 RUN npm install -g typescript-language-server
