--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -99,12 +99,13 @@ jobs:
             ${{ steps.image.outputs.name }}@${{ steps.publish.outputs.digest }}
       - id: grype_scan
         name: Scan Image with Grype
-        uses: anchore/scan-action@v3
+        uses: sebhoss/scan-action@test-flag-1
         with:
           image: ${{ steps.image.outputs.name }}@${{ steps.publish.outputs.digest }}
           output-format: sarif
           only-fixed: true
           fail-build: false
+          add-cpes-if-none: true
       - id: grype_report
         name: Adjust Grype Report
         run: jq '.runs[].tool.driver.name |= "grype-${{ inputs.language }}-${{ inputs.version }}"' ${{ steps.grype_scan.outputs.sarif }} > grype-${{ inputs.language }}-${{ inputs.version }}.sarif
