Add typescript as dependency

--- a/languages/nodejs/latest/Containerfile
+++ b/languages/nodejs/latest/Containerfile
@@ -4,4 +4,4 @@
 # hadolint ignore=DL3007
 FROM docker.io/library/node:latest
 
-RUN npm install -g typescript-language-server
+RUN npm install -g typescript-language-server typescript
