update elixir images
Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>

--- a/languages/elixir/latest/Containerfile
+++ b/languages/elixir/latest/Containerfile
@@ -4,7 +4,7 @@
 # hadolint ignore=DL3007
 FROM docker.io/library/elixir:latest
 
-ENV ELIXIR_LS_VERSION=0.12.0
-RUN wget https://github.com/elixir-lsp/elixir-ls/releases/download/v${ELIXIR_LS_VERSION}/elixir-ls.zip -O elixir-ls.zip && \
+ENV ELIXIR_LS_VERSION=0.15.1
+RUN wget https://github.com/elixir-lsp/elixir-ls/releases/download/v${ELIXIR_LS_VERSION}/elixir-ls-v${ELIXIR_LS_VERSION}.zip -O elixir-ls.zip && \
     mkdir --parents /opt/elixir/ls && \
     unzip elixir-ls.zip -d /opt/elixir/ls
