--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,7 +13,7 @@ jobs:
   version:
     strategy:
       matrix:
-        version: ["latest", "1.14", "1.13", "1.12", "1.11"]
+        version: ["latest", "1.15", "1.14", "1.13"]
     name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
