--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,7 +13,7 @@ jobs:
   version:
     strategy:
       matrix:
-        version: ["latest", "20", "18", "16" ]
+        version: ["latest", "20", "18"]
     name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
