--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -14,7 +14,7 @@ jobs:
   version:
     strategy:
       matrix:
-        version: ["latest", "1.15", "1.14", "1.13"]
+        version: ["latest", "1.16", "1.15", "1.14", "1.13"]
     name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
