--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -14,7 +14,7 @@ jobs:
   version:
     strategy:
       matrix:
-        version: ["latest", "21", "17"]
+        version: ["latest", "22", "21", "17"]
     name: "${{ matrix.version }}"
     uses: ./.github/workflows/publish-image.yml
     with:
